--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -73,6 +73,9 @@ jobs:
             name: github-pages
             url: ${{ steps.deployment.outputs.page_url }}
         steps:
+            - name: Configure pages
+              uses: actions/configure-pages@v5
+
             - name: Deploy to GitHub Pages
               id: deployment
               uses: actions/deploy-pages@v3
