--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -42,10 +42,13 @@ jobs:
                 path: COMP2120-Notes.pdf
                 retention-days: 1
 
-    build:
-        name: Build static site
+    build-deploy:
+        name: Build and deploy static site
         runs-on: ubuntu-latest
         needs: compile
+        environment:
+            name: github-pages
+            url: ${{ steps.deployment.outputs.page_url }}
         steps:
             - name: Create HTML file
               run: |
@@ -60,19 +63,10 @@ jobs:
                 merge-multiple: true
 
             - name: Upload static files as artifact
-              id: deployment
               uses: actions/upload-pages-artifact@v3
               with:
                 path: out
 
-    deploy:
-        name: Deploy static site
-        runs-on: ubuntu-latest
-        needs: build
-        environment:
-            name: github-pages
-            url: ${{ steps.deployment.outputs.page_url }}
-        steps:
             - name: Configure pages
               uses: actions/configure-pages@v5
 
