--- a/.gitignore
+++ b/.gitignore
@@ -316,3 +316,7 @@ TSWLatexianTemp*
 # option is specified. Footnotes are the stored in a file with suffix Notes.bib.
 # Uncomment the next line to have this generated file ignored.
 #*Notes.bib
+
+# IDEs / editors
+.vscode/
+.idea/
