--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -23,17 +23,32 @@ jobs:
               with:
                   python-version: 3.8
 
-            - name: Install dependencies
+            - name: Install Python dependencies
               run: |
                   python -m pip install --upgrade pip
                   pip install -r requirements.txt
 
-            - name: Set up LaTeX docker and compile
-              uses: xu-cheng/latex-action@v3
+            - name: Install Docker
+              run: |
+                  sudo apt-get update
+                  sudo install -m 0755 -d /etc/apt/keyrings
+                  sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
+                  sudo chmod a+r /etc/apt/keyrings/docker.asc
+                  echo \
+                    "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu \
+                    $(. /etc/os-release && echo "${UBUNTU_CODENAME:-$VERSION_CODENAME}") stable" | \
+                    sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+                  sudo apt-get update
+
+            - name: Cache install Docker
+              uses: awalsh128/cache-apt-pkgs-action@v1
               with:
-                root_file: COMP2120-Notes.tex
-                work_in_root_file_dir: true
-                latexmk_shell_escape: true
+                packages: docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin 
+
+            - name: Compile with MiKTeX image
+              run: |
+                  docker run -ti -v miktex:/var/lib/miktex -v "$(pwd)":/miktex/work -e MIKTEX_UID=$(id -u) miktex/miktex:basic \
+                    latexmk --shell-escape -synctex=1 -interaction=nonstopmode -file-line-error -pdf COMP2120-Notes.tex
 
             - name: Upload artifact
               uses: actions/upload-artifact@v4
