--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -26,7 +26,7 @@ jobs:
             - name: Install dependencies
               run: |
                   python -m pip install --upgrade pip
-                  pip install -r requirements.txt
+                  pip install -r build/requirements.txt
 
             - name: Set up LaTeX docker and compile
               uses: xu-cheng/latex-action@v3
@@ -89,7 +89,7 @@ jobs:
         - name: Update apt-get sources
           run: sudo apt-get update
         - name: Get dependencies list
-          run: export APT_LIST=$(awk '{$1=$1}1' OFS='NNNNN' RS='' apt-list.txt)
+          run: export APT_LIST=$(awk '{$1=$1}1' OFS='NNNNN' RS='' build/apt-list.txt)
         ## Install MiKTeX
         - name: Install MiKTeX and dependencies
           uses: awalsh128/cache-apt-pkgs-action@v1
