--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -12,67 +12,67 @@ on:
 
 jobs:
     compile:
-        name: Compile LaTeX notes
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout repository
-              uses: actions/checkout@v4
+      name: Compile LaTeX notes
+      runs-on: ubuntu-latest
+      steps:
+          - name: Checkout repository
+            uses: actions/checkout@v4
 
-            - name: Set up Python
-              uses: actions/setup-python@v5
-              with:
-                  python-version: 3.8
+          - name: Set up Python
+            uses: actions/setup-python@v5
+            with:
+                python-version: 3.8
 
-            - name: Install dependencies
-              run: |
-                  python -m pip install --upgrade pip
-                  pip install -r build/requirements.txt
+          - name: Install dependencies
+            run: |
+                python -m pip install --upgrade pip
+                pip install -r build/requirements.txt
 
-            - name: Set up LaTeX docker and compile
-              uses: xu-cheng/latex-action@v3
-              with:
-                root_file: COMP2120-Notes.tex
-                work_in_root_file_dir: true
-                latexmk_shell_escape: true
+          - name: Set up LaTeX docker and compile
+            uses: xu-cheng/latex-action@v3
+            with:
+              root_file: COMP2120-Notes.tex
+              work_in_root_file_dir: true
+              latexmk_shell_escape: true
 
-            - name: Upload artifact
-              uses: actions/upload-artifact@v4
-              with:
-                name: notes
-                path: COMP2120-Notes.pdf
-                retention-days: 1
+          - name: Upload artifact
+            uses: actions/upload-artifact@v4
+            with:
+              name: notes
+              path: COMP2120-Notes.pdf
+              retention-days: 1
 
     deploy:
-        name: Build and deploy static site
-        runs-on: ubuntu-latest
-        needs: compile
-        environment:
-            name: github-pages
-            url: ${{ steps.deployment.outputs.page_url }}
-        steps:
-            - name: Create HTML file
-              run: |
-                  mkdir out
-                  echo "<!DOCTYPE html><html><head><title>COMP2120 Notes</title><meta http-equiv='refresh' content='0;url=COMP2120-Notes.pdf'></head><body><a href="COMP2120-Notes.pdf">Download Notes</a></body></html>" > out/index.html
+      name: Build and deploy static site
+      runs-on: ubuntu-latest
+      needs: compile
+      environment:
+          name: github-pages
+          url: ${{ steps.deployment.outputs.page_url }}
+      steps:
+          - name: Create HTML file
+            run: |
+                mkdir out
+                echo "<!DOCTYPE html><html><head><title>COMP2120 Notes</title><meta http-equiv='refresh' content='0;url=COMP2120-Notes.pdf'></head><body><a href="COMP2120-Notes.pdf">Download Notes</a></body></html>" > out/index.html
 
-            - name: Download artifact
-              uses: actions/download-artifact@v4
-              with:
-                name: notes
-                path: out
-                merge-multiple: true
+          - name: Download artifact
+            uses: actions/download-artifact@v4
+            with:
+              name: notes
+              path: out
+              merge-multiple: true
 
-            - name: Upload static files as artifact
-              uses: actions/upload-pages-artifact@v3
-              with:
-                path: out
+          - name: Upload static files as artifact
+            uses: actions/upload-pages-artifact@v3
+            with:
+              path: out
 
-            - name: Configure pages
-              uses: actions/configure-pages@v5
+          - name: Configure pages
+            uses: actions/configure-pages@v5
 
-            - name: Deploy to GitHub Pages
-              id: deployment
-              uses: actions/deploy-pages@v4
+          - name: Deploy to GitHub Pages
+            id: deployment
+            uses: actions/deploy-pages@v4
               
     build-by-miktex:
       name: Build by MiKTeX
@@ -89,7 +89,7 @@ jobs:
         - name: Update apt-get sources
           run: sudo apt-get update
         - name: Get dependencies list
-          run: export APT_LIST=$(awk '{$1=$1}1' OFS='NNNNN' RS='' build/apt-list.txt)
+          run: echo "APT_LIST=$(awk '{$1=$1}1' OFS=' ' RS='' build/apt-list.txt)" >> "$GITHUB_ENV"
         ## Install MiKTeX
         - name: Install MiKTeX and dependencies
           uses: awalsh128/cache-apt-pkgs-action@v1
