--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -106,7 +106,7 @@ jobs:
             initexmf --mkmaps
         ## Compile the document
         - name: Compile LaTeX notes
-          run: latexmk -shell-escape -pdf -interaction=nonstopmode -outdir=. COMP2120-Notes.tex
+          run: miktex-pdftex -shell-escape -interaction=nonstopmode -output-dir=. COMP2120-Notes.tex
         ## Upload the artifact
         - name: Upload artifact
           uses: actions/upload-artifact@v4
