--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -28,6 +28,11 @@ jobs:
                 python -m pip install --upgrade pip
                 pip install -r build/requirements.txt
 
+          - name: Include disclaimer header
+            run: |
+                chmod +x ./build/add-disclaimer.sh
+                ./build/add-disclaimer.sh
+
           - name: Set up LaTeX docker and compile
             uses: xu-cheng/latex-action@v3
             with:
@@ -91,6 +96,10 @@ jobs:
           run: sudo apt-get update
         - name: Get dependencies list
           run: echo "APT_LIST=$(awk '{$1=$1}1' OFS=' ' RS='' build/apt-list.txt)" >> "$GITHUB_ENV"
+        - name: Include disclaimer header
+          run: |
+              chmod +x ./build/add-disclaimer.sh
+              ./build/add-disclaimer.sh
         ## Install MiKTeX
         - name: Install MiKTeX and dependencies
           uses: awalsh128/cache-apt-pkgs-action@v1
