--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -82,6 +82,8 @@ jobs:
     build-by-miktex:
       name: Build by MiKTeX
       runs-on: ubuntu-22.04
+      env:
+        APT_LIST: "" ## Evaluated at runtime
       if: contains(github.event.head_commit.message, '@miktex')
       steps:
         - name: Checkout repository
@@ -116,6 +118,7 @@ jobs:
             initexmf --mkmaps
         ## Compile the document
         - name: Compile LaTeX notes
+          id: compile
           run: miktex-pdftex -shell-escape -interaction=nonstopmode -output-dir=. COMP2120-Notes.tex
         ## Upload the artifact
         - name: Upload artifact
@@ -124,3 +127,11 @@ jobs:
             name: notes-miktex
             path: COMP2120-Notes.pdf
             retention-days: 1
+        ## Upload logs if failed
+        - name: Upload compile logs
+          if: ${{ failure() && steps.compile.conclusion == 'failure' }}
+          uses: actions/upload-artifact@v4
+          with:
+            name: logs
+            path: /home/runner/.miktex/texmfs/data/miktex/log/
+            retention-days: 14
