--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -14,6 +14,7 @@ jobs:
     compile:
       name: Compile LaTeX notes
       runs-on: ubuntu-latest
+      if: contains(github.event.head_commit.message, '@nodeploy')
       steps:
           - name: Checkout repository
             uses: actions/checkout@v4
@@ -119,7 +120,7 @@ jobs:
         ## Compile the document
         - name: Compile LaTeX notes
           id: compile
-          run: miktex-pdftex -shell-escape -interaction=nonstopmode -output-dir=. COMP2120-Notes.tex
+          run: miktex-pdftex -shell-escape -interaction=nonstopmode -output-directory=. COMP2120-Notes.tex
         ## Upload the artifact
         - name: Upload artifact
           uses: actions/upload-artifact@v4
