--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -120,7 +120,7 @@ jobs:
         ## Compile the document
         - name: Compile LaTeX notes
           id: compile
-          run: miktex-pdftex -shell-escape -interaction=nonstopmode -output-directory=. COMP2120-Notes.tex
+          run: miktex-pdflatex -shell-escape -interaction=nonstopmode -output-directory=. COMP2120-Notes.tex
         ## Upload the artifact
         - name: Upload artifact
           uses: actions/upload-artifact@v4
