--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -14,7 +14,7 @@ jobs:
     compile:
       name: Compile LaTeX notes
       runs-on: ubuntu-latest
-      if: !contains(github.event.head_commit.message, '@nodeploy')
+      if: ${{ !contains(github.event.head_commit.message, '@nodeploy') }}
       steps:
           - name: Checkout repository
             uses: actions/checkout@v4
