--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -14,7 +14,7 @@ jobs:
     compile:
       name: Compile LaTeX notes
       runs-on: ubuntu-latest
-      if: ${{ !contains(github.event.head_commit.message, '@nodeploy') }}
+      if: ${{ contains(github.event.head_commit.message, '@docker') }}
       steps:
           - name: Checkout repository
             uses: actions/checkout@v4
@@ -51,7 +51,8 @@ jobs:
     deploy:
       name: Build and deploy static site
       runs-on: ubuntu-latest
-      needs: compile
+      needs: build-by-miktex
+      if: ${{ !contains(github.event.head_commit.message, '@nodeploy') }}
       environment:
           name: github-pages
           url: ${{ steps.deployment.outputs.page_url }}
@@ -64,7 +65,7 @@ jobs:
           - name: Download artifact
             uses: actions/download-artifact@v4
             with:
-              name: notes
+              name: notes-miktex
               path: out
               merge-multiple: true
 
@@ -85,7 +86,6 @@ jobs:
       runs-on: ubuntu-22.04
       env:
         APT_LIST: "" ## Evaluated at runtime
-      if: contains(github.event.head_commit.message, '@miktex')
       steps:
         - name: Checkout repository
           uses: actions/checkout@v4
@@ -123,7 +123,7 @@ jobs:
         ## Compile the document
         - name: Compile LaTeX notes
           id: compile
-          run: latexmk -shell-escape -interaction=nonstopmode -output-directory=. COMP2120-Notes.tex
+          run: latexmk -shell-escape -interaction=nonstopmode -pdf -outdir=. COMP2120-Notes.tex
         ## Upload the artifact
         - name: Upload artifact
           uses: actions/upload-artifact@v4
