--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -123,7 +123,7 @@ jobs:
         ## Compile the document
         - name: Compile LaTeX notes
           id: compile
-          run: latexmk -shell-escape -interaction=nonstopmode -pdf -outdir=. COMP2120-Notes.tex
+          run: latexmk -shell-escape -interaction=nonstopmode -pdf -outdir=. -f COMP2120-Notes.tex
         ## Upload the artifact
         - name: Upload artifact
           uses: actions/upload-artifact@v4
