--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -108,6 +108,10 @@ jobs:
           uses: awalsh128/cache-apt-pkgs-action@v1
           with:
             packages: ${{ env.APT_LIST }}
+        - name: Install Python packages
+          run: |
+            python -m pip install --upgrade pip
+            pip install -r build/requirements.txt
         - name: Finish MiKTeX setup
           run: |
             miktexsetup finish
