--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -138,7 +138,7 @@ jobs:
           run: echo "PATH=$HOME/bin:$PATH" >> "$GITHUB_ENV"
         ## Compile the document
         - name: Get root file
-          run: echo "ROOT_FILE=$(ls ${{ matrix.target }} | grep -E "COMP2120-.*\.tex" >> "$GITHUB_ENV"
+          run: echo "ROOT_FILE=$(ls ${{ matrix.target }} | grep -E "COMP2120-.*\.tex)" >> "$GITHUB_ENV"
         - name: Compile target - ${{ matrix.target }}
           id: compile
           run: |
@@ -146,7 +146,7 @@ jobs:
             mv ./${{ matrix.target }}/${{ env.ROOT_FILE }} .
         ## Upload the artifact
         - name: Find output file
-          run: echo "OUTPUT_FILE=$(ls ${{ matrix.target }} | grep -E "COMP2120-.*\.pdf" >> "$GITHUB_ENV"
+          run: echo "OUTPUT_FILE=$(ls ${{ matrix.target }} | grep -E "COMP2120-.*\.pdf)" >> "$GITHUB_ENV"
         - name: Upload artifact
           uses: actions/upload-artifact@v4
           with:
