--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -158,6 +158,6 @@ jobs:
           if: ${{ always() }}
           uses: actions/upload-artifact@v4
           with:
-            name: logs
+            name: logs-miktex-${{ matrix.target }}
             path: /home/runner/.miktex/texmfs/data/miktex/log/
             retention-days: 14
