--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -146,7 +146,7 @@ jobs:
             mv ./${{ matrix.target }}/${{ env.ROOT_FILE }} .
         ## Upload the artifact
         - name: Find output file
-          run: echo "OUTPUT_FILE`(ls ${{ matrix.target }} | grep -E "COMP2120-.*\.pdf")`" >> "$GITHUB_ENV"
+          run: echo "OUTPUT_FILE=`(ls ${{ matrix.target }} | grep -E "COMP2120-.*\.pdf")`" >> "$GITHUB_ENV"
         - name: Upload artifact
           uses: actions/upload-artifact@v4
           with:
