fix, gh: correct syntax for setting OUTPUT_FILE in download step

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -94,7 +94,7 @@ jobs:
         id: download-pdf
         if: ${{ steps.check-hash.outputs.changed == 0 }}
         run: |
-          echo "OUTPUT_FILE=${${{ env.ROOT_FILE }}/.tex/.pdf}" >> "$GITHUB_ENV"
+          echo "OUTPUT_FILE=`${${{ env.ROOT_FILE }}/.tex/.pdf}`" >> "$GITHUB_ENV"
           curl https://shingzhanho.github.io/COMP2120-Notes/${{ env.OUTPUT_FILE }} --output ./${{ matrix.target }}/${{ env.OUTPUT_FILE }}
       ## Cache the MiKTeX packages if apt cache or miktex cache did not hit
       - name: Cache MiKTeX packages
